--- a/StudentManagementProject/templates/header.html
+++ b/StudentManagementProject/templates/header.html
@@ -17,7 +17,7 @@
       <div class="container-fluid">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#">Student Management System </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -31,7 +31,7 @@
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
+                      Student
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#">Action</a></li>
@@ -40,18 +40,15 @@
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                  </li>
                 </ul>
-              
+                    <!--- search bar -->
                 <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
                   <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
                 </form>
-        
+                    <!--- user signup menu -->
                 <div class="text-end">
                   <button type="button" class="btn btn-outline-primary me-2">Login</button>
-                  <button type="button" class="btn btn-warning">Sign-up</button>
+                  <button type="button" class="btn btn-outline-warning">Sign-up</button>
                 </div>
               </div>
             </div>
