create page has created

--- a/StudentManagementProject/templates/header.html
+++ b/StudentManagementProject/templates/header.html
@@ -1,3 +1,5 @@
+
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -14,10 +16,10 @@
 
     {% comment %} <h3> This is student Management System. !</h3> {% endcomment %}
     <header class="p-3 bg-light text-white">
-      <div class="container-fluid">
+      <div class="container">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Student Management System </a>
+              <a class="navbar-brand" href="#">Student Management </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
