--- a/StudentManagementProject/templates/student/create.html
+++ b/StudentManagementProject/templates/student/create.html
@@ -2,10 +2,60 @@
 {% extends 'main-content.html' %}
     {% block content %}
 
-        <div class="container">
-            <div class="row">
-                <h3> This is student Create page </h3> 
-                     
+        <div class="container" >
+            <div class="row col-md-3" >
+                <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Add Student 
+                </button>
+
+                <!-- Button trigger modal -->
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Student Details</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <!----- forms -->
+                                    <form class="row g-3">
+                                        <div class="col-md-6">
+                                          <label for="inputEmail4" class="form-label">Roll No</label>
+                                          <input type="text" class="form-control" id="inputEmail4">
+                                        </div>
+                                        <div class="col-md-6">
+                                          <label for="inputPassword4" class="form-label">Full name</label>
+                                          <input type="text" class="form-control" id="inputPassword4">
+                                        </div>
+                                        <div class="col-12">
+                                          <label for="inputAddress" class="form-label">Address</label>
+                                          <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                                        </div>
+                                        <div class="col-12">
+                                          <label for="inputAddress2" class="form-label">Phone</label>
+                                          <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                                        </div>
+                                        <div class="col-6">
+                                            <label for="inputEmail4" class="form-label">Email</label>
+                                            <input type="Email" class="form-control" id="inputEmail4">
+                                          </div>
+                                
+                                        <div class="col-12">
+                                          <button type="submit" class="btn btn-primary">Add Student</button>
+                                        </div>
+                                      </form>
+
+                                </div>
+                            </div>
+                        </div>
+                            <!---- modal footer -->
+                    </div>
+                    </div>
+                </div>   
             </div>
         <div>
     {% endblock %}
