some changes on final projects

--- a/StudentManagementProject/templates/student/update.html
+++ b/StudentManagementProject/templates/student/update.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container tex-center">
-    <div class="row col-md-3 offset-md-3" style="margin-top: 10px" >
+    <div class="row col-md-3 offset-md-3" id="add_student" >
         <!-- Button trigger modal -->
         <button type="button"  class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Update Student 
