--- a/StudentManagementProject/templates/student/create.html
+++ b/StudentManagementProject/templates/student/create.html
@@ -3,7 +3,7 @@
     {% block content %}
 
         <div class="container tex-center">
-            <div class="row col-md-3 offset-md-3" style="margin-top: 10px" >
+            <div class="row col-md-3 offset-md-3" id="add_student" >
                 <button type="button"  class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
                     Add Student 
                 </button>
@@ -25,23 +25,23 @@
                                              {% csrf_token %}
                                             <div class="col-md-6">
                                             <label for="inputRoll" class="form-label">Roll No</label>
-                                                <input type="text" name="std_roll" class="form-control" id="inputRoll">
+                                                <input type="text"  name="std_roll" required class="form-control" id="inputRoll">
                                             </div>
                                             <div class="col-md-6">
                                             <label for="inputName" class="form-label">Full name</label>
-                                                <input type="text" name="std_name" class="form-control" id="inputName">
+                                                <input type="text" name="std_name" required class="form-control" id="inputName">
                                             </div>
                                             <div class="col-12">
                                             <label for="inputAddress" class="form-label">Address</label>
-                                                <input type="text" name="std_address" class="form-control" id="inputAddress" placeholder="Address">
+                                                <input type="text" name="std_address" required class="form-control" id="inputAddress" placeholder="Address">
                                             </div>
                                             <div class="col-md-6">
                                             <label for="inputPhone" class="form-label">Phone</label>
-                                                <input type="text" name="std_phone" class="form-control" id="inputPhone" placeholder="Phone">
+                                                <input type="text" name="std_phone" required class="form-control" id="inputPhone" placeholder="Phone">
                                             </div>
                                             <div class="col-md-6">
                                                 <label for="inputEmail" class="form-label">Email</label>
-                                                <input type="text" name='std_email' class="form-control" id="inputEmail"  placeholder="Email">
+                                                <input type="text" name='std_email' required class="form-control" id="inputEmail"  placeholder="Email">
                                             </div>
                                             <div class="col-12 text-center">
                                                 <button type="submit" class="btn btn-primary ">Add Student </button>
